# vk-captcha-solver-py

./: .gitignore  README.md  pyproject.toml  test.py
vk_captcha_solver/: __init__.py  api.py  checkbox_solver.py  exceptions.py  slider_solver.py  types.py  utils.py
