[project]
name = "vk-captcha-solver-py"
version = "0.1.0"
description = "VK Captcha Solver ported to Python"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "aiohttp>=3.13.2",
    "vkbottle",
]

[tool.uv.sources]
vkbottle = { git = "https://github.com/50Bytes-dev/vkbottle.git", rev = "15fb5c8af321f1b6b05a507fb16de005ac064df7" }

[dependency-groups]
dev = ["notebook>=7.5.0"]
