[project]
name = "vk-captcha-solver-py"
version = "0.1.0"
description = "VK Captcha Solver ported to Python"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "aiohttp>=3.13.2",
    "vkbottle",
    "aiohttp-socks>=0.10.2",
]

[tool.uv.sources]
vkbottle = { git = "https://github.com/50Bytes-dev/vkbottle.git", rev = "2013004f39b943a38ada6b854d18ad1355c7e34a" }

[dependency-groups]
dev = ["beautifulsoup4>=4.14.2", "httpx>=0.28.1", "notebook>=7.5.0"]
